# rgx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  release-plz.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dist.yml  release-plz.yml  vscode-ext.yml
assets/: demo.tape  generate_preview.py
benches/: engine_bench.rs
docs/: ROADMAP.md  advanced.md  integrations.md  shortcuts.md  usage.md
docs/superpowers/plans/: 2026-03-24-editor-plugins.md  2026-04-04-step-through-debugger.md  2026-04-05-architecture-refactor.md  2026-04-11-grex-overlay.md  2026-04-18-rgx-filter.md
docs/superpowers/specs/: 2026-03-11-issues-31-34-design.md  2026-03-24-editor-plugins-design.md  2026-04-04-step-through-debugger-design.md  (+1 more)
launch/: LAUNCH_PLAYBOOK.md  awesome_rust_draft.md  monitor.py  r_commandline.md  r_rust.md  show_hn.md  terminal_trove.md
plugin/nvim/lua/rgx/: init.lua
plugin/vscode/: README.md  package-lock.json  package.json  rgx-0.1.0.vsix
plugin/zed/: tasks.json
src/: ansi.rs  app.rs  codegen.rs  event.rs  grex_integration.rs  lib.rs  main.rs  recipe.rs
src/config/: cli.rs  mod.rs  settings.rs  workspace.rs
src/engine/: fancy.rs  mod.rs  pcre2.rs  pcre2_debug.rs  rust_regex.rs
src/explain/: formatter.rs  mod.rs  visitor.rs
src/filter/: app.rs  json_path.rs  mod.rs  run.rs  ui.rs
src/input/: editor.rs  mod.rs  vim.rs
src/ui/: debugger.rs  explanation.rs  grex_overlay.rs  match_display.rs  mod.rs  regex_input.rs  replace_input.rs  status_bar.rs  syntax_highlight.rs  test_input.rs  theme.rs
tests/: config_tests.rs  debugger_tests.rs  engine_tests.rs  explain_tests.rs  filter_tests.rs  grex_tests.rs  ui_tests.rs  urls.toml  vim_tests.rs
(+1 files in other folders)
